# portadiva

./: .gitignore  CMakeLists.txt
include/core/: list.h
include/engine/: engine.h  game_object.h  generic_renderer.h  scene_object.h  texture_manager.h  trig_lookup.h
include/game/core/dsc/: dsc.h  opcode.h  target.h
include/game/core/objects/: rhythm_controller.h  target.h  target_effect_appear.h  target_effect_destroy.h  target_effect_renderer.h  target_needle.h  target_real.h  target_real_renderer.h
include/game/dsc/: dsc.h
include/game/objects/: rhythm_controller.h  target.h  target_effect_appear.h  target_effect_destroy.h  target_effect_renderer.h  target_real.h  target_real_renderer.h
include/game/utils/: bezier.h
src/: main.c
src/core/: list.c
src/engine/: engine.c  game_object.c  generic_renderer.c  scene_object.c  texture_manager.c  trig_lookup.c
src/game/core/dsc/: dsc.c  opcode.c
src/game/core/objects/: rhythm_controller.c  target.c  target_effect_appear.c  target_effect_destroy.c  target_effect_renderer.c  target_needle.c  target_real.c  target_real_renderer.c
src/game/dsc/: dsc.c  opcode.c
src/game/objects/: rhythm_controller.c  target.c  target_effect_appear.c  target_effect_destroy.c  target_effect_renderer.c  target_needle.c  target_real.c  target_real_renderer.c
src/game/utils/: bezier.c
